# POLYGOTTEM

./: .gitignore  .gitmodules  AUTO_EXECUTION_ANALYSIS.md  CAPABILITIES_SHOWCASE.md  CVE_CHAIN_ANALYSIS.md  CVE_RESEARCH_BUFFER_OVERFLOW.md  C_METHODS_INTEGRATION_SUMMARY.md  INTEGRATION_SUMMARY.md  MAXIMUM_POLYGLOT_THEORY.md  PUBLICATION_READY.md  README.md  TUI_VPS_INTEGRATION.md  UI_ENHANCEMENTS.md  WINDOWS_GUIDE.md  WORKFLOW_FEATURES.md  WORLD_RECORD_POLYGLOT.md  cryptd  install  install.bat  install.py  install.sh  launch  launch.bat  launch.py  launch.sh  polygottem.py  requirements-intel.txt  requirements.txt  test_workflow_methods.py  test_workflows.py
Payloads2/brainlet-cat-dancing-on-head_extracted/: brainlet-cat-dancing-on-head_analysis_report.txt
advanced_polyglot/: README.md
archive/: IWAR_COMPREHENSIVE_UNCERTAINTY_ANALYSIS.md  IWAR_CVE_CORRELATION_MATRIX.md  IWAR_CVE_THREAT_INTELLIGENCE_REPORT.md  IWAR_SCAN_REPORT.md
archive/advanced_polyglot/: .gitignore  Makefile  polyglot_advanced.c
archive/audio_video_polyglots/: README.md
archive/cross_format_polyglots/: Makefile  README.md  world_record_6way.polyglot  world_record_8way.polyglot  world_record_polyglot.py
archive/neural_steganography/: Makefile  NPU_ADVERSARIAL_README.md  npu_adversarial_realtime.py
archive/polyglot_research/: Makefile
archive/vx_underground/: .gitignore  Makefile  README.md  albanian_virus.sh  polyglot_extract.c
audio_video_polyglots/: Makefile
audio_video_polyglots/mp3_zip/: Makefile  mp3_zip_polyglot.c
audio_video_polyglots/png_audio/: png_audio_steg  png_audio_steg.c
audio_video_polyglots/tools/: Makefile
audio_video_polyglots/wav_exe/: wav_exe_polyglot.c
c_methods/: CMakeLists.txt  README.md
c_methods/exploitation/: kernel_exploitation.c  memory_exploitation.c  privilege_escalation.c  windows_exploitation.c
c_methods/include/: polygottem_c.h
c_methods/native/: compression.c  cryptography.c  memory_operations.c  network_operations.c
c_methods/payloads/: linux_payloads.c  macos_payloads.c  windows_payloads.c
c_methods/utilities/: anti_analysis.c  obfuscation.c  process_injection.c  system_manipulation.c
cross_format_polyglots/: verify_world_record.sh  world_record_7way.polyglot
cross_format_polyglots/gif_html/: Makefile  gif_html_gen
cross_format_polyglots/jpeg_jar_shell/: Makefile  jpeg_jar_shell_gen  jpeg_jar_shell_polyglot.c
cross_format_polyglots/pdf_advanced/: pdf_exploit_gen
cross_format_polyglots/pdf_zip/: Makefile  pdf_zip_polyglot.c
cross_format_polyglots/tools/: Makefile  polyglot_synthesizer.py
cryptd_extracted/: cryptd_analysis_report.txt
detection/: cve_exploits.yar
docs/: ANALYSIS_FINDINGS.md  C_METHODS_INTEGRATION_GUIDE.md  FILE_DIALOG.md  IMPLEMENTATION_COMPARISON.md  INSTALLER_CHANGES.md  INTERACTIVE_TUI_FEATURES.md  IWAR_ANALYZER_README.md  POLISHED_WORKFLOW_GUIDE.md  QUICK_START_INTERACTIVE.md  REMOTE_ACCESS.md
docs/guides/: APT41_ATTACK_CHAINS.md  APT41_CASCADING_POLYGLOT.md  AUTO_EXECUTION_POLYGLOTS.md  CHANGELOG_INTERACTIVE_TUI.md  CVE_CHAIN_ANALYSIS.md  IMPLEMENTATION_GUIDE.md  IMPROVEMENTS.md  PAYLOAD_CAPABILITIES.md  POLYGLOT_MATRIX.md  PRODUCTION_READY_100.md  TUI_INTEGRATION.md  VPS_GEOLOCATION_GUIDE.md
installers/: install.bat  install.sh  launch.sh
neural_steganography/: neural_steg  neural_steg.c  openvino_npu_pipeline.py  steganalysis_evasion.py  test_npu_adversarial.sh
neural_steganography/models/: gan_steg_trainer.py
neural_steganography/tools/: stego_analyzer.py
payloads/: README.md
polyglot_research/: README.md
polyglot_research/asm_implementation/: polyglot_generator.asm
polyglot_research/c_implementation/: Makefile
test_formats/: FORMAT_SUPPORT.md
test_payloads/: EMBEDDING_EXAMPLES.md  TEST_RESULTS.md
tests/: test_all_cves.sh  test_workflow_methods.py  test_workflows.py
tools/: README.md  auto_execution_engine.py  beacon_server.py  c_methods_autoexec_bridge.py  c_methods_tui_integration.py  cascade_optimizer.py  command_executor.py  config.py  cve_chain_analyzer.py  demo_full_attack.sh  desktop_generator.py  duckdns_integration.py  execution_validator.py  exploit_header_generator.py  file_browser.py  guarantee_beacon_integrator.py  guarantee_c_compiler.py  guarantee_c_integration.py  guarantee_c_methods.py  guarantee_chainer.py  guarantee_fingerprint_auth.py  guarantee_fingerprint_setup.py  guarantee_network_beacon.py  guarantee_report_generator.py  guarantee_validator.py  intel_acceleration.py  interactive_menu.py  iwar_malware_analyzer.py  multi_cve_polyglot.py  operational_security.py  polyglot_embed.py  polyglot_extract.py  polyglot_orchestrator.py  polyglot_orchestrator_enhanced.py  target_duckdns_setup.py  tui_helper.py  tui_theme_classified.py  validation_utils.py  vps_geo_manager.py
vx_underground/: polyglot_embed.c
(+36 files in other folders)
